force-app/main/default/objects/Stripe_Bearer_Token__c/Stripe_Bearer_Token__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Stripe Bearer Token</label>
</CustomObject>