force-app/main/default/objects/Stripe_Bearer_Token__c/fields/Bearer_Token__c.field-meta.xml
<CustomField>
    <fullName>Bearer_Token__c</fullName>
    <label>Bearer Token</label>
    <length>84</length>
    <type>Text</type>
</CustomField>