force-app/main/default/objects/Stripe_Bearer_Token__c/fields/Failure_Redirect__c.field-meta.xml
<CustomField>
    <fullName>Failure_Redirect__c</fullName>
    <label>Failure Redirect</label>
    <type>Url</type>
</CustomField>