force-app/main/default/objects/Stripe_Bearer_Token__c/fields/Success_Redirect__c.field-meta.xml
<CustomField>
    <fullName>Success_Redirect__c</fullName>
    <label>Success Redirect</label>
    <type>Url</type>
</CustomField>